Changes from 6.4.4 to 6.5.0
- typeref expanded
- arrayref introduced
- nullptr and other c++ modernizations
- clang now defaulted to c++11
- minimum native windows now requires conditionals
- mingw has to use win32 pthread support

Changes from 6.4.3 to 6.4.4
- additional typeref operators

Changes from 6.4.2 to 6.4.3
- fix for broken windows setuid macro

Changes from 6.4.1 to 6.4.2
- solaris related cmake fixes
- cleanup of test build and osx fixes

Changes from 6.4.0 to 6.4.1
- keyfile fixed constructor issue

Changes from 6.3.6 to 6.4.0
- new typeref system for immutable atomic reference counted objects
- heap management objects support moving heap through assignment
- extended unit tests for typeref system
- improved openbsd support
- atomics enabled by default

Changes from 6.3.5 to 6.3.6
- code cleanup
- simulate option for scrub
- set newline style for cmake genorated files

Changes from 6.3.4 to 6.3.5
- general code cleanup
- some build fixes

Changes from 6.3.3 to 6.3.4
- improved atomics support
- configure atomics default matches cmake default
- general code cleanup
- more casting operations and cast fixups
- polymorphic casting support & rtti detection
- enclose random value templates in Random
- improved rng support

Changes from 6.3.2 to 6.3.3
- improved cipher key management
- b64 support improved and string hex conversions
- simplified digest functions
- some solaris fixes

Changes from 6.3.1 to 6.3.2
- fixed a broken streambuf for commoncpp
- deref cast function added
- fixed missing pkg-config

Changes from 6.3.0 to 6.3.1
- copyright assignment to Cherokees of Idaho
- introduction of ucommon cmake hosted macros
- simplified doxygen doc support
- convergence of automake and cmake builds
- make utils easier for source introspection
- converted for cmake builds on debian
- count for String::check should be size_t
- string bounds checking

Changes from 6.2.3 to 6.3.0
- remove legacy cmodel support
- modernize library usage