@@ -5,6 +5,7 @@ Changes from 6.4.4 to 6.5.0
 - clang now defaulted to c++11
 - minimum native windows now requires conditionals
 - mingw has to use win32 pthread support
+- somewhat more usable heap temporary templates
 
 Changes from 6.4.3 to 6.4.4
 - additional typeref operators
